added support for multiple kf trajectories

--- a/plot_kfs.ipynb
+++ b/plot_kfs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -5109,7 +5109,7 @@
     "\n",
     "trajectories = []\n",
     "for i in range(0, 4):\n",
-    "  trajectories.append(read_kf_trajectory(path.join('vabadusepst_kf', f'kf_trajectory_{i}.txt')))\n",
+    "  trajectories.append(read_kf_trajectory(path.join('data', 'vabadusepst_kf', f'kf_trajectory_{i}.txt')))\n",
     "\n",
     "fig = go.Figure()\n",
     "\n",
