--- a/notebooks/plot_results.ipynb
+++ b/notebooks/plot_results.ipynb
@@ -2,18 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    },
+    {
      "ename": "AttributeError",
-     "evalue": "'ZMQInteractiveShell' object has no attribute 'extensions'",
+     "evalue": "can't set attribute '_model'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[30], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m get_ipython()\u001b[39m.\u001b[39mrun_line_magic(\u001b[39m'\u001b[39m\u001b[39mrun\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39msetup_path.py\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m----> 2\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39m'\u001b[39m\u001b[39mautoreload\u001b[39m\u001b[39m'\u001b[39m \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m get_ipython()\u001b[39m.\u001b[39;49mextensions:\n\u001b[1;32m      3\u001b[0m     get_ipython()\u001b[39m.\u001b[39mrun_line_magic(\u001b[39m'\u001b[39m\u001b[39mload_ext\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mautoreload\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m      4\u001b[0m get_ipython()\u001b[39m.\u001b[39mrun_line_magic(\u001b[39m'\u001b[39m\u001b[39mautoreload\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39m2\u001b[39m\u001b[39m'\u001b[39m)\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'ZMQInteractiveShell' object has no attribute 'extensions'"
+      "Cell \u001b[0;32mIn[3], line 17\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[39m# TRAJECTORY_NAME = 'vabadussild'\u001b[39;00m\n\u001b[1;32m     14\u001b[0m \u001b[39m# TRAJECTORY_NAME = 'vabadusepst'\u001b[39;00m\n\u001b[1;32m     15\u001b[0m TRAJECTORY_NAME \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39moldtown\u001b[39m\u001b[39m'\u001b[39m\n\u001b[0;32m---> 17\u001b[0m processor \u001b[39m=\u001b[39m ORBSLAMProcessor(path\u001b[39m.\u001b[39;49mjoin(\u001b[39m'\u001b[39;49m\u001b[39m~/orbslam-out\u001b[39;49m\u001b[39m'\u001b[39;49m, TRAJECTORY_NAME))\n",
+      "File \u001b[0;32m~/projects/gorbslam/gorbslam/nn/orbslam_processor.py:29\u001b[0m, in \u001b[0;36mORBSLAMProcessor.__init__\u001b[0;34m(self, orbslam_results_dir)\u001b[0m\n\u001b[1;32m     26\u001b[0m     os\u001b[39m.\u001b[39mmakedirs(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mprocessed_results_dir, exist_ok\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n\u001b[1;32m     28\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39morbslam \u001b[39m=\u001b[39m ORBSLAMResults(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39morbslam_results_dir)\n\u001b[0;32m---> 29\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mmodel \u001b[39m=\u001b[39m SLAMModelHandler(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mprocessed_results_dir, os\u001b[39m.\u001b[39;49mpath\u001b[39m.\u001b[39;49mjoin(os\u001b[39m.\u001b[39;49mgetcwd(), \u001b[39m'\u001b[39;49m\u001b[39mkeras_logs\u001b[39;49m\u001b[39m'\u001b[39;49m))\n\u001b[1;32m     31\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_scale_align_trajectories()\n",
+      "File \u001b[0;32m~/projects/gorbslam/gorbslam/nn/slam_model_handler.py:29\u001b[0m, in \u001b[0;36mSLAMModelHandler.__init__\u001b[0;34m(self, model_dir, keras_logs_dir)\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39msource_normalizer \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n\u001b[1;32m     28\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mbest_hps \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n\u001b[0;32m---> 29\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mmodel \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n\u001b[1;32m     30\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcallbacks \u001b[39m=\u001b[39m [\n\u001b[1;32m     31\u001b[0m     EarlyStopping(monitor\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mval_loss\u001b[39m\u001b[39m'\u001b[39m, patience\u001b[39m=\u001b[39m\u001b[39m10\u001b[39m, verbose\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m),\n\u001b[1;32m     32\u001b[0m     ReduceLROnPlateau(monitor\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mval_loss\u001b[39m\u001b[39m'\u001b[39m, factor\u001b[39m=\u001b[39m\u001b[39m0.2\u001b[39m, patience\u001b[39m=\u001b[39m\u001b[39m5\u001b[39m, verbose\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m, min_lr\u001b[39m=\u001b[39m\u001b[39m1e-7\u001b[39m),\n\u001b[1;32m     33\u001b[0m     TensorBoard(log_dir\u001b[39m=\u001b[39mpath\u001b[39m.\u001b[39mjoin(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mkeras_logs_dir, \u001b[39m'\u001b[39m\u001b[39mtensorboard\u001b[39m\u001b[39m'\u001b[39m, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mproject_name)),\n\u001b[1;32m     34\u001b[0m ]\n",
+      "\u001b[0;31mAttributeError\u001b[0m: can't set attribute '_model'"
      ]
     }
    ],
@@ -56,11 +66,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "48/48 [==============================] - 0s 673us/step\n",
-      "381/381 [==============================] - 0s 605us/step\n",
+      "48/48 [==============================] - 0s 820us/step\n",
+      "381/381 [==============================] - 0s 684us/step\n",
       "1/1 [==============================] - 0s 10ms/step\n",
-      "135/135 [==============================] - 0s 604us/step\n",
-      "30/30 [==============================] - 0s 682us/step\n"
+      "135/135 [==============================] - 0s 734us/step\n",
+      "30/30 [==============================] - 0s 666us/step\n"
      ]
     }
    ],
@@ -111,7 +121,7 @@
     }
    ],
    "source": [
-    "processor.model.model.summary()"
+    "processor.model._model.summary()"
    ]
   },
   {
@@ -128836,7 +128846,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[29], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mutils\u001b[39;00m \u001b[39mimport\u001b[39;00m create_training_splits\n\u001b[1;32m      4\u001b[0m training_data \u001b[39m=\u001b[39m (processor\u001b[39m.\u001b[39morbslam\u001b[39m.\u001b[39mmapping\u001b[39m.\u001b[39mtrajectory, processor\u001b[39m.\u001b[39morbslam\u001b[39m.\u001b[39mmapping\u001b[39m.\u001b[39mtrajectory_gt_utm)\n\u001b[1;32m      5\u001b[0m extra_data \u001b[39m=\u001b[39m (processor\u001b[39m.\u001b[39morbslam\u001b[39m.\u001b[39mlocalization[\u001b[39m0\u001b[39m]\u001b[39m.\u001b[39mtrajectory, processor\u001b[39m.\u001b[39morbslam\u001b[39m.\u001b[39mlocalization[\u001b[39m0\u001b[39m]\u001b[39m.\u001b[39mtrajectory_gt_utm)\n",
+      "Cell \u001b[0;32mIn[40], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mutils\u001b[39;00m \u001b[39mimport\u001b[39;00m create_training_splits\n\u001b[1;32m      4\u001b[0m training_data \u001b[39m=\u001b[39m (processor\u001b[39m.\u001b[39morbslam\u001b[39m.\u001b[39mmapping\u001b[39m.\u001b[39mtrajectory, processor\u001b[39m.\u001b[39morbslam\u001b[39m.\u001b[39mmapping\u001b[39m.\u001b[39mtrajectory_gt_utm)\n\u001b[1;32m      5\u001b[0m extra_data \u001b[39m=\u001b[39m (processor\u001b[39m.\u001b[39morbslam\u001b[39m.\u001b[39mlocalization[\u001b[39m0\u001b[39m]\u001b[39m.\u001b[39mtrajectory, processor\u001b[39m.\u001b[39morbslam\u001b[39m.\u001b[39mlocalization[\u001b[39m0\u001b[39m]\u001b[39m.\u001b[39mtrajectory_gt_utm)\n",
       "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'utils'"
      ]
     }
