--- a/notebooks/plot_results.ipynb
+++ b/notebooks/plot_results.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -11,19 +11,6 @@
      "text": [
       "The autoreload extension is already loaded. To reload it, use:\n",
       "  %reload_ext autoreload\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "can't set attribute '_model'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 17\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[39m# TRAJECTORY_NAME = 'vabadussild'\u001b[39;00m\n\u001b[1;32m     14\u001b[0m \u001b[39m# TRAJECTORY_NAME = 'vabadusepst'\u001b[39;00m\n\u001b[1;32m     15\u001b[0m TRAJECTORY_NAME \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39moldtown\u001b[39m\u001b[39m'\u001b[39m\n\u001b[0;32m---> 17\u001b[0m processor \u001b[39m=\u001b[39m ORBSLAMProcessor(path\u001b[39m.\u001b[39;49mjoin(\u001b[39m'\u001b[39;49m\u001b[39m~/orbslam-out\u001b[39;49m\u001b[39m'\u001b[39;49m, TRAJECTORY_NAME))\n",
-      "File \u001b[0;32m~/projects/gorbslam/gorbslam/nn/orbslam_processor.py:29\u001b[0m, in \u001b[0;36mORBSLAMProcessor.__init__\u001b[0;34m(self, orbslam_results_dir)\u001b[0m\n\u001b[1;32m     26\u001b[0m     os\u001b[39m.\u001b[39mmakedirs(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mprocessed_results_dir, exist_ok\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n\u001b[1;32m     28\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39morbslam \u001b[39m=\u001b[39m ORBSLAMResults(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39morbslam_results_dir)\n\u001b[0;32m---> 29\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mmodel \u001b[39m=\u001b[39m SLAMModelHandler(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mprocessed_results_dir, os\u001b[39m.\u001b[39;49mpath\u001b[39m.\u001b[39;49mjoin(os\u001b[39m.\u001b[39;49mgetcwd(), \u001b[39m'\u001b[39;49m\u001b[39mkeras_logs\u001b[39;49m\u001b[39m'\u001b[39;49m))\n\u001b[1;32m     31\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_scale_align_trajectories()\n",
-      "File \u001b[0;32m~/projects/gorbslam/gorbslam/nn/slam_model_handler.py:29\u001b[0m, in \u001b[0;36mSLAMModelHandler.__init__\u001b[0;34m(self, model_dir, keras_logs_dir)\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39msource_normalizer \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n\u001b[1;32m     28\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mbest_hps \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n\u001b[0;32m---> 29\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mmodel \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n\u001b[1;32m     30\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcallbacks \u001b[39m=\u001b[39m [\n\u001b[1;32m     31\u001b[0m     EarlyStopping(monitor\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mval_loss\u001b[39m\u001b[39m'\u001b[39m, patience\u001b[39m=\u001b[39m\u001b[39m10\u001b[39m, verbose\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m),\n\u001b[1;32m     32\u001b[0m     ReduceLROnPlateau(monitor\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mval_loss\u001b[39m\u001b[39m'\u001b[39m, factor\u001b[39m=\u001b[39m\u001b[39m0.2\u001b[39m, patience\u001b[39m=\u001b[39m\u001b[39m5\u001b[39m, verbose\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m, min_lr\u001b[39m=\u001b[39m\u001b[39m1e-7\u001b[39m),\n\u001b[1;32m     33\u001b[0m     TensorBoard(log_dir\u001b[39m=\u001b[39mpath\u001b[39m.\u001b[39mjoin(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mkeras_logs_dir, \u001b[39m'\u001b[39m\u001b[39mtensorboard\u001b[39m\u001b[39m'\u001b[39m, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mproject_name)),\n\u001b[1;32m     34\u001b[0m ]\n",
-      "\u001b[0;31mAttributeError\u001b[0m: can't set attribute '_model'"
      ]
     }
    ],
@@ -49,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,18 +46,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "48/48 [==============================] - 0s 820us/step\n",
-      "381/381 [==============================] - 0s 684us/step\n",
-      "1/1 [==============================] - 0s 10ms/step\n",
-      "135/135 [==============================] - 0s 734us/step\n",
-      "30/30 [==============================] - 0s 666us/step\n"
+      "48/48 [==============================] - 0s 642us/step\n",
+      "381/381 [==============================] - 0s 775us/step\n",
+      "1/1 [==============================] - 0s 9ms/step\n",
+      "135/135 [==============================] - 0s 619us/step\n",
+      "30/30 [==============================] - 0s 651us/step\n"
      ]
     }
    ],
@@ -80,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -45058,7 +45045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -83907,7 +83894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -128836,69 +128823,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'utils'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[40], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mutils\u001b[39;00m \u001b[39mimport\u001b[39;00m create_training_splits\n\u001b[1;32m      4\u001b[0m training_data \u001b[39m=\u001b[39m (processor\u001b[39m.\u001b[39morbslam\u001b[39m.\u001b[39mmapping\u001b[39m.\u001b[39mtrajectory, processor\u001b[39m.\u001b[39morbslam\u001b[39m.\u001b[39mmapping\u001b[39m.\u001b[39mtrajectory_gt_utm)\n\u001b[1;32m      5\u001b[0m extra_data \u001b[39m=\u001b[39m (processor\u001b[39m.\u001b[39morbslam\u001b[39m.\u001b[39mlocalization[\u001b[39m0\u001b[39m]\u001b[39m.\u001b[39mtrajectory, processor\u001b[39m.\u001b[39morbslam\u001b[39m.\u001b[39mlocalization[\u001b[39m0\u001b[39m]\u001b[39m.\u001b[39mtrajectory_gt_utm)\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'utils'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'max': 315.06977135236286,\n",
+      " 'mean': 44.78436261160459,\n",
+      " 'median': 8.6268582733708,\n",
+      " 'min': 0.12859450229089586,\n",
+      " 'rmse': 83.19873713902422,\n",
+      " 'sse': 899863.8819986982,\n",
+      " 'std': 70.11697887816304}\n"
      ]
     }
    ],
    "source": [
+    "# from gorbslam.common.plotting_utils import create_ape_fig\n",
+    "import pprint\n",
+    "from gorbslam.common.plotting_utils import create_ape_fig\n",
+    "from gorbslam.common.utils import calculate_ape, create_trajectory_from_array\n",
     "\n",
-    "from utils import create_training_splits\n",
     "\n",
+    "trajectory = create_trajectory_from_array(processor.orbslam.mapping.trajectory_fitted_utm)\n",
+    "trajectory_gt = create_trajectory_from_array(processor.orbslam.mapping.trajectory_gt_utm)\n",
     "\n",
-    "training_data = (processor.orbslam.mapping.trajectory, processor.orbslam.mapping.trajectory_gt_utm)\n",
-    "extra_data = (processor.orbslam.localization[0].trajectory, processor.orbslam.localization[0].trajectory_gt_utm)\n",
+    "ape_metric = calculate_ape(trajectory, trajectory_gt)\n",
     "\n",
-    "training, validation, testing = create_training_splits(training_data, extra_data, 0.20)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig_training = go.Figure()\n",
+    "ape_stats = ape_metric.get_all_statistics()\n",
+    "pprint.pprint(ape_stats)\n",
     "\n",
-    "fig_training.add_trace(go.Scatter(\n",
-    "    x=training[0][:, 0],\n",
-    "    y=training[0][:, 2],\n",
-    "    mode='markers',\n",
-    "    name=\"training\"\n",
-    "))\n",
-    "fig_training.add_trace(go.Scatter(\n",
-    "    x=validation[0][:, 0],\n",
-    "    y=validation[0][:, 2],\n",
-    "    mode='markers',\n",
-    "    name=\"validation\"\n",
-    "))\n",
-    "fig_training.add_trace(go.Scatter(\n",
-    "    x=testing[0][:, 0],\n",
-    "    y=testing[0][:, 2],\n",
-    "    mode='markers',\n",
-    "    name=\"testing\"\n",
-    "))\n",
-    "\n",
-    "fig_training.update_layout(\n",
-    "    yaxis=dict(scaleanchor=\"x\", scaleratio=1),\n",
-    "    height=1200\n",
-    ")\n",
-    "\n",
-    "print(f'training: {training[0].shape}')\n",
-    "print(f'validation: {validation[0].shape}')\n",
-    "print(f'testing: {testing[0].shape}')\n",
-    "\n",
-    "fig_training.show()"
+    "ape_fig = create_ape_fig(trajectory, trajectory_gt, ape_metric)\n"
    ]
   }
  ],
