hyperparameter search updates

--- a/notebooks/plot_results_gbr.ipynb
+++ b/notebooks/plot_results_gbr.ipynb
@@ -47,8 +47,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# processor.initialize_model(overwrite=True)\n",
-    "processor.initialize_model()\n"
+    "processor.initialize_model(overwrite=True)\n",
+    "# processor.initialize_model()\n"
    ]
   },
   {
