added Track class, efactored to use DataFrame internally

--- a/notebooks/plot_results_rfr.ipynb
+++ b/notebooks/plot_results_rfr.ipynb
@@ -32,7 +32,7 @@
     "from gorbslam.common.plotting_utils import create_scattermapbox, create_map_fig\n",
     "from os import path\n",
     "\n",
-    "from gorbslam.gbr.orbslam_processor import ORBSLAMProcessor\n",
+    "from gorbslam.orbslam_processor import ORBSLAMProcessor\n",
     "\n",
     "TRAJECTORY_NAME = 'vabadussild'\n",
     "# TRAJECTORY_NAME = 'vabadusepst'\n",
@@ -105,7 +105,7 @@
     }
    ],
    "source": [
-    "print(processor.model.best_hps)"
+    "print(processor.model._model_params)"
    ]
   },
   {
