added learning rate to hp search, increased range for num of hidden layers in hp search, added timestamp to tensorboard output

--- a/notebooks/plot_results.ipynb
+++ b/notebooks/plot_results.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%run setup_path.py\n",
     "%load_ext autoreload\n",
@@ -26,9 +17,9 @@
     "# TRAJECTORY_NAME = 'vabadussild'\n",
     "# TRAJECTORY_NAME = 'vabadusepst'\n",
     "# TRAJECTORY_NAME = 'oldtown'\n",
-    "TRAJECTORY_NAME = 'vabadussild_novatel'\n",
+    "# TRAJECTORY_NAME = 'vabadussild_novatel'\n",
     "# TRAJECTORY_NAME = 'vabadusepst_novatel'\n",
-    "# TRAJECTORY_NAME = 'oldtown_novatel'\n",
+    "TRAJECTORY_NAME = 'oldtown_novatel'\n",
     "# TRAJECTORY_NAME = 'kitti/09_30_drive_0018'\n",
     "\n",
     "model_type = ModelType.NN\n",
@@ -47,8 +38,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# processor.initialize_model(overwrite=True)\n",
-    "processor.initialize_model()\n"
+    "processor.initialize_model(overwrite=True)\n",
+    "# processor.initialize_model()\n"
    ]
   },
   {
@@ -75,6 +66,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "processor.model.model.summary()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "processor.create_ape_plot_all().show()\n"
    ]
   },
@@ -84,7 +84,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "processor.create_ape_plot().show()\n"
+    "# processor.create_ape_plot().show()\n"
    ]
   },
   {
@@ -93,7 +93,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "processor.create_ape_plot(0).show()\n"
+    "# processor.create_ape_plot(0).show()\n"
    ]
   },
   {
@@ -102,7 +102,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# processor.create_2d_plot_utm().show()\n"
+    "processor.create_2d_plot_utm().show()\n"
    ]
   },
   {
@@ -149,7 +149,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.11"
   },
   "orig_nbformat": 4,
   "vscode": {
