added notbook to summarize all results

--- a/notebooks/plot_results.ipynb
+++ b/notebooks/plot_results.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 492,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%run setup_path.py\n",
     "%load_ext autoreload\n",
@@ -18,13 +27,13 @@
     "# TRAJECTORY_NAME = 'vabadusepst'\n",
     "# TRAJECTORY_NAME = 'oldtown'\n",
     "# TRAJECTORY_NAME = 'vabadussild_novatel'\n",
-    "# TRAJECTORY_NAME = 'vabadusepst_novatel'\n",
-    "TRAJECTORY_NAME = 'oldtown_novatel'\n",
+    "TRAJECTORY_NAME = 'vabadusepst_novatel'\n",
+    "# TRAJECTORY_NAME = 'oldtown_novatel'\n",
     "# TRAJECTORY_NAME = 'kitti/09_30_drive_0018'\n",
     "\n",
-    "model_type = ModelType.NN\n",
+    "# model_type = ModelType.NN\n",
     "# model_type = ModelType.NN_CLR\n",
-    "# model_type = ModelType.GBR\n",
+    "model_type = ModelType.GBR\n",
     "# model_type = ModelType.SVR\n",
     "# model_type = ModelType.RFR\n",
     "# model_type = ModelType.UMEYAMA\n",
@@ -34,12 +43,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 493,
    "metadata": {},
    "outputs": [],
    "source": [
-    "processor.initialize_model(overwrite=True)\n",
-    "# processor.initialize_model()\n"
+    "# processor.initialize_model(overwrite=True)\n",
+    "processor.initialize_model()\n"
    ]
   },
   {
@@ -66,7 +75,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "processor.model.model.summary()\n"
+    "# processor.model.model.summary()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "processor.calculate_ape_stats_all()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import plotly.express as px\n",
+    "\n",
+    "# ape = processor.calculate_ape_metric_all()\n",
+    "\n",
+    "# fig = px.histogram(x=ape[0].error, marginal=\"violin\")\n",
+    "\n",
+    "# fig.show()\n"
    ]
   },
   {
@@ -93,7 +126,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# processor.create_ape_plot(0).show()\n"
+    "processor.create_ape_plot(0).show()\n"
    ]
   },
   {
@@ -111,7 +144,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# processor.create_2d_plot_slam().show()\n"
+    "processor.create_2d_plot_slam().show()\n"
    ]
   },
   {
@@ -120,7 +153,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# processor.create_map_plot().show()\n"
+    "processor.create_map_plot().show()\n"
    ]
   },
   {
