--- a/notebooks/plot_results.ipynb
+++ b/notebooks/plot_results.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 492,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%run setup_path.py\n",
     "%load_ext autoreload\n",
@@ -23,13 +14,9 @@
     "\n",
     "from gorbslam.orbslam_processor import ModelType, ORBSLAMProcessor\n",
     "\n",
-    "# TRAJECTORY_NAME = 'vabadussild'\n",
-    "# TRAJECTORY_NAME = 'vabadusepst'\n",
-    "# TRAJECTORY_NAME = 'oldtown'\n",
-    "# TRAJECTORY_NAME = 'vabadussild_novatel'\n",
-    "TRAJECTORY_NAME = 'vabadusepst_novatel'\n",
-    "# TRAJECTORY_NAME = 'oldtown_novatel'\n",
-    "# TRAJECTORY_NAME = 'kitti/09_30_drive_0018'\n",
+    "TRAJECTORY_NAME = 'seq_01'\n",
+    "# TRAJECTORY_NAME = 'seq_02'\n",
+    "# TRAJECTORY_NAME = 'seq_03'\n",
     "\n",
     "# model_type = ModelType.NN\n",
     "# model_type = ModelType.NN_CLR\n",
@@ -38,12 +25,12 @@
     "# model_type = ModelType.RFR\n",
     "# model_type = ModelType.UMEYAMA\n",
     "\n",
-    "processor = ORBSLAMProcessor(path.join('~/orbslam-out', TRAJECTORY_NAME), model_type)\n"
+    "processor = ORBSLAMProcessor(path.join('..', 'data','sequences', TRAJECTORY_NAME), model_type)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 493,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 496,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,22 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import plotly.express as px\n",
-    "\n",
-    "ape = processor.calculate_ape_metric_all()\n",
-    "\n",
-    "fig = px.histogram(x=ape[0].error, marginal=\"violin\")\n",
-    "\n",
-    "fig.show()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 499,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -21097,7 +21069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 500,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21106,7 +21078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 501,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -36295,7 +36267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 502,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -44759,7 +44731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 503,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -52230,7 +52202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 504,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -60707,7 +60679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 505,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
