added docstrings to orbslam_processor.py

--- a/notebooks/plot_results.ipynb
+++ b/notebooks/plot_results.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -10,18 +10,52 @@
      "output_type": "stream",
      "text": [
       "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n",
-      "16/16 [==============================] - 0s 557us/step\n",
-      "88/88 [==============================] - 0s 619us/step\n",
-      "45/45 [==============================] - 0s 507us/step\n",
-      "404/404 [==============================] - 0s 513us/step\n",
+      "  %reload_ext autoreload\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/erik/miniconda3/envs/gorbslam/lib/python3.10/site-packages/tensorflow_addons/utils/tfa_eol_msg.py:23: UserWarning: \n",
+      "\n",
+      "TensorFlow Addons (TFA) has ended development and introduction of new features.\n",
+      "TFA has entered a minimal maintenance and release mode until a planned end of life in May 2024.\n",
+      "Please modify downstream libraries to take dependencies from other repositories in our TensorFlow community (e.g. Keras, Keras-CV, and Keras-NLP). \n",
+      "\n",
+      "For more information see: https://github.com/tensorflow/addons/issues/2807 \n",
+      "\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16/16 [==============================] - 0s 569us/step\n",
+      "88/88 [==============================] - 0s 570us/step\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-05-09 18:05:59.338169: W tensorflow/tsl/platform/profile_utils/cpu_utils.cc:128] Failed to get CPU frequency: 0 Hz\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "45/45 [==============================] - 0s 571us/step\n",
+      "404/404 [==============================] - 0s 464us/step\n",
       "15/15 [==============================] - 0s 499us/step\n",
-      "132/132 [==============================] - 0s 478us/step\n",
-      "28/28 [==============================] - 0s 495us/step\n",
-      "38/38 [==============================] - 0s 516us/step\n",
-      "287/287 [==============================] - 0s 460us/step\n",
-      "23/23 [==============================] - 0s 578us/step\n",
-      "131/131 [==============================] - 0s 467us/step\n"
+      "132/132 [==============================] - 0s 463us/step\n",
+      "28/28 [==============================] - 0s 483us/step\n",
+      "38/38 [==============================] - 0s 507us/step\n",
+      "287/287 [==============================] - 0s 438us/step\n",
+      "23/23 [==============================] - 0s 434us/step\n",
+      "131/131 [==============================] - 0s 445us/step\n"
      ]
     }
    ],
@@ -66,15 +100,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "seq_01\n",
+      "seq_02\n",
+      "seq_03\n"
+     ]
+    }
+   ],
    "source": [
     "for seq, processor in processors.items():\n",
     "    print(seq)\n",
     "    # processor.create_ape_plot_all(include_slam=False).show()\n",
     "    # Keras only\n",
-    "    processor.model.model.summary()\n",
+    "    # processor.model.model.summary()\n",
     "    # plot_model(\n",
     "    #     processor.model.model,\n",
     "    #     to_file=f\"{seq}_model.png\",\n",
@@ -83,7 +127,8 @@
     "    #     show_layer_activations=True,\n",
     "    # )\n",
     "    # processor.create_2d_plot_slam(only_slam=True).show()\n",
-    "    # processor.create_2d_plot_utm(True).show()"
+    "    # processor.create_2d_plot_slam_with_gt().show()\n",
+    "    processor.create_3d_plot_slam().show()"
    ]
   },
   {
