--- a/notebooks/plot_kfs.ipynb
+++ b/notebooks/plot_kfs.ipynb
@@ -1,10 +1,27 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This notebook is used to plot keyframe (mapping) trajectories obtained during multiple mapping sessions of the same sequence.\n",
+    "It can be noted that the scale between different iterations differs significantly."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    },
     {
      "data": {
       "application/vnd.plotly.v1+json": {
@@ -14308,27 +14325,42 @@
     }
    ],
    "source": [
+    "%run setup_path.py\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "\n",
     "from os import path\n",
     "\n",
     "import plotly.graph_objects as go\n",
     "\n",
-    "from utils import read_tum_file\n",
+    "from gorbslam.common.utils import read_tum \n",
     "\n",
-    "\n",
-    "# TRAJECTORY_NAME = 'm_vabadusepst'\n",
-    "TRAJECTORY_NAME = 'm_oldtown'\n",
+    "# TRAJECTORY_NAME = \"seq_01\"\n",
+    "TRAJECTORY_NAME = \"seq_02\"\n",
     "\n",
     "trajectories = []\n",
     "for i in range(0, 5):\n",
-    "  trajectories.append(read_tum_file(path.join('data', TRAJECTORY_NAME, f'm_trajectory_{i}.txt')))\n",
+    "    trajectories.append(\n",
+    "        read_tum(\n",
+    "            path.join(\"../data\", \"kf_comparison\", TRAJECTORY_NAME, f\"m_trajectory_{i}.txt\")\n",
+    "        )\n",
+    "    )\n",
     "\n",
     "fig = go.Figure()\n",
     "\n",
     "for i, trajectory in enumerate(trajectories):\n",
-    "  fig.add_trace(go.Scatter(x=trajectory[:, 1], y=trajectory[:, 3], mode='lines', name=f'kf_trajectory_{i}'))  \n",
+    "    fig.add_trace(\n",
+    "        go.Scatter(\n",
+    "            # y and z are swapped in case of monocular SLAM, see https://github.com/UZ-SLAMLab/ORB_SLAM3/blob/master/Calibration_Tutorial.pdf\n",
+    "            x=trajectory.x,\n",
+    "            y=trajectory.z,\n",
+    "            mode=\"lines\",\n",
+    "            name=f\"kf_trajectory_{i}\",\n",
+    "        )\n",
+    "    )\n",
     "\n",
     "fig.update_layout(yaxis=dict(scaleanchor=\"x\", scaleratio=1), height=800)\n",
-    "fig.show()\n"
+    "fig.show()"
    ]
   }
  ],
@@ -14348,7 +14380,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.11"
   },
   "orig_nbformat": 4
  },
