added explanations to notebooks

--- a/notebooks/overlapping_bags.ipynb
+++ b/notebooks/overlapping_bags.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This ground truths from bags onto a map to visualize if there are any overlapping sequences."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
