--- a/notebooks/overlapping_seqs.ipynb
+++ b/notebooks/overlapping_seqs.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This notebook compares and plots ground truths from already ORB-SLAM 3 processed results."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -7212,7 +7220,7 @@
     "\n",
     "fig = create_map_fig(traces, (lat_center, lon_center))\n",
     "\n",
-    "fig.show()\n"
+    "fig.show()"
    ]
   },
   {
@@ -14326,7 +14334,7 @@
     "\n",
     "fig = create_2d_fig(traces)\n",
     "\n",
-    "fig.show()\n"
+    "fig.show()"
    ]
   },
   {
@@ -83491,7 +83499,7 @@
     "#         create_2d_scatter(pd.DataFrame(overlap, columns=[\"x\", \"y\"]), key, opacity=0.5)\n",
     "#     )\n",
     "\n",
-    "# create_2d_fig(traces).show()\n"
+    "# create_2d_fig(traces).show()"
    ]
   },
   {
