--- a/notebooks/plot_kfs.ipynb
+++ b/notebooks/plot_kfs.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -13496,7 +13496,16 @@
         }
        ],
        "layout": {
+        "font": {
+         "size": 20
+        },
         "height": 800,
+        "margin": {
+         "b": 10,
+         "l": 10,
+         "r": 10,
+         "t": 50
+        },
         "template": {
          "data": {
           "bar": [
@@ -14313,6 +14322,7 @@
           }
          }
         },
+        "width": 1600,
         "yaxis": {
          "scaleanchor": "x",
          "scaleratio": 1
@@ -14334,6 +14344,8 @@
     "import plotly.graph_objects as go\n",
     "\n",
     "from gorbslam.common.utils import read_tum \n",
+    "\n",
+    "FIGURES_ROOT = \"figures\"\n",
     "\n",
     "# TRAJECTORY_NAME = \"seq_01\"\n",
     "TRAJECTORY_NAME = \"seq_02\"\n",
@@ -14359,7 +14371,14 @@
     "        )\n",
     "    )\n",
     "\n",
-    "fig.update_layout(yaxis=dict(scaleanchor=\"x\", scaleratio=1), height=800)\n",
+    "fig.update_layout(\n",
+    "    yaxis=dict(scaleanchor=\"x\", scaleratio=1), \n",
+    "    height=800,\n",
+    "    width=1600, \n",
+    "    font=dict(size=20), \n",
+    "    margin={\"t\": 50, \"b\": 10, \"l\": 10, \"r\": 10}\n",
+    "    )\n",
+    "fig.write_image(path.join(FIGURES_ROOT, \"arbitrary_scale.png\"), scale=2,)\n",
     "fig.show()"
    ]
   }
